--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "asiawebsite",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "scss": "node-sass -w scss/ -o dist/css/ --recursive"
+    "scss": "node-sass -w scss/ -o dist/css/ --recursive",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC"
