--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "asiawebsite",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": ".js",
   "scripts": {
     "scss": "node-sass -w scss/ -o dist/css/ --recursive",
     "start": "node server.js"
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "scss": "^0.2.4"
   }
 }
