--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
   "main": ".js",
   "scripts": {
     "scss": "node-sass -w scss/ -o dist/css/ --recursive",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.1"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "http": "0.0.1-security",
