--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-loader": "^8.1.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "node-mailer": "^0.1.1",
     "scss": "^0.2.4"
   }
 }
