--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.20.2",
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
     "babel": "^6.23.0",
-    "babel-loader": "^8.1.0",
+    "babel-polyfill": "^6.26.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "node-mailer": "^0.1.1",
