--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
     "babel": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "express": "^4.17.1",
